# helios-telemetry-cots-decoder

./: .gitignore  .gitmodules  Dockerfile  Makefile  README.md  config.json  pyproject.toml
src/: example.py  main.py
src/decoder/: serial_reader.py
